--- a/src/components/datepicker.css
+++ b/src/components/datepicker.css
@@ -1,12 +1,17 @@
 .Datepicker--DateList {
     display: flex;
+    margin: 2px 0 2px 0;
 }
 
 .Datepicker--DateDayItem {
-    padding: 0 20px 0 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
+    margin: 0 12px 0 12px;
+    width: 45px;
+    height: 49px;
+    flex-shrink: 0;
 }
 
 .Datepicker--Strip {
@@ -21,6 +26,11 @@
 
 .DateDayItem--selected {
     font-weight: bold;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    border: 2px solid rgb(77, 123, 243);
+    color: rgb(77, 123, 243);
 }
 
 .DateDayItem--disabled {
@@ -31,14 +41,38 @@
     display: flex;
     overflow-x: scroll;
     scrollbar-width: none;
+    margin: 2px 0 2px 0;
 
 }
 
 .Datepicker{
     display: flex;
-    margin-top: 12px;
+    margin: 12px 0 0 12px;
+    align-items: center;
 }
 
-.Datepicker--DayLabel{
+.Datepicker--DayLabel {
+    font-size: 12px;
+    margin: 4px 0 0 0;
+}
+
+.Datepicker--button-prev, .Datepicker--button-next{
+    border: none;
+    text-decoration: none;
+    background: rgb(77, 123, 243);
+    cursor: pointer;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    flex-shrink: 0;
+}
+
+.Datepicker--MonthYearLabel {
+    margin-left: 12px;
     font-size: 15px;
+    color: rgb(77, 123, 243);
+    font-weight: bold;
 }
