--- a/src/components/datepicker.css
+++ b/src/components/datepicker.css
@@ -100,4 +100,18 @@
 
 .monthContainer {
     display: flex;
+    flex-direction: column;
+}
+
+.month {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    left: 5px;
+    width: max-content;
+    margin: 0 14px 5px 14px;
+}
+
+.daysContainer {
+    display: flex;
 }
