--- a/src/components/datepicker.css
+++ b/src/components/datepicker.css
@@ -8,7 +8,6 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    /*margin: 0 12px 0 12px;*/
     margin: 0 5px 0 5px;
     width: 45px;
     height: 49px;
@@ -19,7 +18,6 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 10px;
     width: max-content;
     max-width: 100%;
     overflow: hidden;
@@ -42,7 +40,7 @@
     display: flex;
     overflow-x: scroll;
     scrollbar-width: none;
-    margin: 2px 0 2px 0;
+    margin: 2px 0 2px -40px;
 
 }
 
@@ -54,8 +52,7 @@
 .Datepicker {
     display: flex;
     width: 100%;
-    align-items: center;
-    margin-top: 12px;
+    align-items: flex-end;
 }
 
 .Datepicker--DayLabel {
@@ -63,7 +60,15 @@
     margin: 4px 0 0 0;
 }
 
-.Datepicker--button-prev, .Datepicker--button-next{
+.Datepicker--buttonWrapper {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    z-index: 2;
+    background: white;
+}
+
+.Datepicker--button-prev, .Datepicker--button-next {
     border: none;
     text-decoration: none;
     background: rgb(77, 123, 243);
@@ -78,14 +83,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
+    margin-bottom: 5px;
 }
 
 .Datepicker--MonthYearLabel {
-    margin-left: 12px;
     align-self: flex-start;
+    z-index: 3;
     font-size: 15px;
     color: rgb(77, 123, 243);
     font-weight: bold;
+    position: sticky;
+    top: 0;
+    left: 10px;
+    width: max-content;
+    margin: 0 14px 10px 0;
 }
 
 .Datepicker--DateLabel {
@@ -103,15 +115,7 @@
     flex-direction: column;
 }
 
-.month {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    left: 5px;
-    width: max-content;
-    margin: 0 14px 5px 14px;
-}
-
 .daysContainer {
     display: flex;
+    z-index: 1;
 }
